# quant

./: .clang_complete  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
images/: README.md  beans_compressed.ppm  compress_images.sh  couple_compressed.ppm  earth.ppm  earth_compressed.ppm  fix_images.sh  gen_markdown_table.sh  splash.ppm  splash_compressed.ppm
images/compressed_images/: beans.raport  coodie_face.raport  couple.raport  earth.raport  splash.raport  t.raport
images/compressed_kodim/: README.md  kodim01.raport  kodim02.raport  kodim03.raport  kodim04.raport  kodim05.raport  kodim06.raport  kodim07.raport  kodim08.raport  kodim09.raport  kodim10.raport  kodim11.raport  kodim12.raport  kodim13.raport  kodim14.raport  kodim15.raport  kodim16.raport  kodim17.raport  kodim18.raport  kodim19.raport  kodim20.raport  kodim21.raport  kodim22.raport  kodim23.raport  kodim24.raport
images/compressed_kodim_small_block/: README.md  kodim01.raport  kodim02.raport  kodim03.raport  kodim04.raport  kodim05.raport  kodim06.raport  kodim07.raport  kodim08.raport  kodim09.raport  kodim10.raport  kodim11.raport  kodim12.raport  kodim13.raport  kodim14.raport  kodim15.raport  kodim16.raport  kodim17.raport  kodim18.raport  kodim19.raport  kodim20.raport  kodim21.raport  kodim22.raport  kodim23.raport  kodim24.raport
include/: ColorSpace.hpp  Compressor.hpp  Debug.hpp  KDTree.hpp  ProgramParameters.hpp  Quantizer.hpp  RGBImage.h  RGBImage.hpp  VectorOperations.hpp
src/: ColorSpace.cpp  Compressor.cpp  KDTree.cpp  ProgramOptions.cpp  ProgramParameters.cpp  Quantizer.cpp  RGBImage.cpp  main.cpp  test.cpp
